--- a/views/abouts/career.ejs
+++ b/views/abouts/career.ejs
@@ -12,7 +12,147 @@
                 </p>
             </div>
             <a href="#opportunity">
-                <p style="font-size: 30px; margin-left: 2rem;text-decoration: underline;">View Open Positions</p>
+                <p style="font-size: 30px; margin-left: 2rem;text-decoration: underline;margin-bottom: 2rem;" id="open-positions">View Open Positions</p>
             </a>
+            
+            <div class="row ">
+                <div class="col-xl-7">
+                    <ul class="list-unstyled p-0">
+                        <li class="wow cfadeinup animated" style="visibility: visible;">
+                            <p class="career-info-text">Our diverse team thrives on collaboration, creativity, and
+                                continuous growth.
+                            </p>
+                            <p class="career-text-tag">Working at ORVANE means being part of an environment where
+                                strategic thinking meets modern
+                                technology, every project is an opportunity to innovate, and your unique skills shape
+                                world-class digital solutions.</p>
+                        </li>
+                        <li class="wow cfadeinup animated" style="visibility: visible;">
+                            <p class=" career-info-text">Meaningful Work</p>
+                            <p class="career-text-tag">From crafting intuitive user experiences to developing robust
+                                digital platforms, we
+                                empower our team members to make their mark on meaningful projects and stories alike.
+                                Whether collaborating with renowned Fortune 500 companies or helping ambitious startups
+                                bring their brands to life, you'll be supported by a culture that values both individual
+                                growth and collective success.</p>
+                        </li>
+                        <li class="wow cfadeinup animated" style="visibility: visible;">
+                            <p class=" career-info-text">Exceeding Expectations</p>
+                            <p class="career-text-tag">At Orvane, we believe in fostering an environment where
+                                creativity flourishes, skills are
+                                regularly developed, and every team member has the opportunity to contribute to
+                                game-changing digital transformations. Join us in creating experiences that don't just
+                                meet expectations—they exceed them.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="offset-lg-1 col-lg-4" id="sticky2">
+                    <div class="img-wrapper"> <span class="text-stroke career-heading "
+                            style="font-size: 100px;opacity: 0.5;">Work @ Orvane</span> </div>
+                </div>
+            </div>
+            <section class="story-beats nitro-offscreen">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-9 col-xl-7 mb-4">
+                            <p class="career-info-text" style="margin-left: -4rem;">At Orvane Digital, we offer more
+                                than just a job.</p>
+                            <p class="career-text-tag">We provide a launchpad for innovation, collaboration, and career
+                                acceleration. As a
+                                dynamic digital experience agency, we foster an environment where bold ideas thrive,
+                                cross-functional teamwork is celebrated, and every team member contributes to building
+                                world-class digital solutions for clients who expect the exceptional.</p>
+                            <p class="career-text-tag">We offer a flexible remote work environment, allowing you to
+                                collaborate from wherever
+                                you do your best work—while staying connected to a creative, supportive team.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <p class="career-info-text">What sets us apart:</p>
+                </div>
+                <div class="container" style="font-size: 20px;">
+                    <div class="row">
+                        <div class="col-12 wow cfadeinup mb-0 animated" style="visibility: visible;">
+                            <div class="listing-wrapper mb-2"> <span class="img-wrapper"> <img alt="lead-magnet"
+                                        nitro-lazy-src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon1.svg"
+                                        class="lazyloaded mb-2" decoding="async" nitro-lazy-empty="" id="MzU5OjEwOA==-1"
+                                        src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon1.svg">
+                                </span>
+                                <div class="beats-title">
+                                    <h3 clas="">Meaningful Projects</h3>
+                                </div>
+                                <div class="beats-desc mb-2"> <span>Work with both big-name brands and ambitious
+                                        startups,
+                                        crafting digital experiences that make an impact and expand your
+                                        portfolio.</span> </div>
+                            </div>
+                        </div>
+                        <div class="col-12 wow cfadeinup mb-0 animated" style="visibility: visible;">
+                            <div class="listing-wrapper"> <span class="img-wrapper"> <img alt="lead-magnet"
+                                        nitro-lazy-src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon2.svg"
+                                        class="lazyloaded" decoding="async" nitro-lazy-empty="" id="MzcyOjEwOA==-1"
+                                        src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon2.svg">
+                                </span>
+                                <div class="beats-title">
+                                    <h3 class="mb-2">Collaborative Culture</h3>
+                                </div>
+                                <div class="beats-desc mb-2"> <span>Join a diverse team of strategists, designers, and
+                                        engineers who approach every challenge with curiosity, empathy, and fresh
+                                        thinking.</span> </div>
+                            </div>
+                        </div>
+                        <div class="col-12 wow cfadeinup mb-0 animated" style="visibility: visible;">
+                            <div class="listing-wrapper mb-2"> <span class="img-wrapper"> <img alt="lead-magnet"
+                                        nitro-lazy-src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon3.svg"
+                                        class="lazyloaded" decoding="async" nitro-lazy-empty="" id="Mzg1OjEwOA==-1"
+                                        src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon3.svg">
+                                </span>
+                                <div class="beats-title">
+                                    <h3 class="mb-2">Growth Opportunities</h3>
+                                </div>
+                                <div class="beats-desc mb-2"> <span>Gain hands-on experience with modern frameworks and
+                                        emerging technologies while pushing the boundaries of your craft.</span> </div>
+                            </div>
+                        </div>
+                        <div class="col-12 wow cfadeinup  animated" style="visibility: visible;">
+                            <div class="listing-wrapper"> <span class="img-wrapper"> <img alt="lead-magnet"
+                                        nitro-lazy-src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon4.svg"
+                                        class="lazyloaded" decoding="async" nitro-lazy-empty="" id="Mzk4OjEwOA==-1"
+                                        src="https://cdn-eahjn.nitrocdn.com/ChEvwayTHZmZJUAdsUNMLXuXZdBprFoQ/assets/images/source/rev-32ffdf4/www.spinxdigital.com/app/uploads/2024/12/lead-magnet-icon4.svg">
+                                </span>
+                                <div class="beats-title">
+                                    <h3 class="">Strategic Thinking</h3>
+                                </div>
+                                <div class="beats-desc"> <span>Be part of a team that values both bold creativity and
+                                        data-informed decision-making—where your ideas actually shape the work.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="viewOpenPositions" class="opportunities-section nitro-offscreen ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="h1 cfadeinup wow animated career-heading mt-5" style="visibility: visible;font-size: 100px;opacity: 0.5;padding-bottom: 2rem;" id="opportunity">Opportunities</p>
+                            <div class="opportunities-list cfadeinup wow animated" style="visibility: visible;"> <a
+                                    class="btn-link btn-link-white h4"
+                                    href="mailto:jeveneabhi665@gmail.com"><span>Web
+                                        Design Project Manager</span></a> <span>Los Angeles, CA</span> </div>
+                            <div class="opportunities-list cfadeinup wow animated" style="visibility: visible;"> <a
+                                    class="btn-link btn-link-white h4"
+                                    href="mailto:jeveneabhi665@gmail.com"><span>Experienced
+                                        Sales Executive with Website Sales Experience</span></a> <span>Los Angeles,
+                                    CA</span> </div>
+                            <div class="opportunities-list cfadeinup wow animated" style="visibility: visible;"> <a
+                                    class="btn-link btn-link-white h4"
+                                    href="mailto:jeveneabhi665@gmail.com"><span>Website
+                                        UI/UX Designer</span></a> <span>Los Angeles, CA</span> </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
