--- a/views/abouts/who-we-are.ejs
+++ b/views/abouts/who-we-are.ejs
@@ -11,14 +11,13 @@
       </p>
     </div>
 
-    <div class="about-info">
-      <div class="experience">
-        <p class="experience-stats"><b>20+</b></p>
-        <p class="experience-info years">Years in business</p>
-        <p class="experience-stats"><b>250+</b></p>
-        <p class="experience-info">Websites and Project launched</p>
-        <p class="experience-stats"><b>350+</b></p>
-        <p class="experience-info award">Awards and recognition</p>
-      </div>
+    <div class="col-lg-4 col-xl-3 mx-auto hero-in-sub-fade-up" >
+      <div class="statistics font-stat stat" > <span class="h2 d-block font-stat stat" >20+</span> <span class="body-large d-block mb-2 stat">Years in
+          business</span></div>
+      <div class="statistics font-stat stat " > <span class="h2 d-block font-stat stat">500+</span> <span class="body-large d-block stat">Websites &amp;
+          projects launched</span> </div>
+      <div class="statistics font-stat stat" > <span class="h2 d-block font-stat stat">35+</span> <span class="body-large d-block stat">Awards &amp;
+          recognition</span> </div>
     </div>
+
   </div>
