--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -25,7 +25,7 @@
           <a class="nav-link fs-5" href="/orvane/services">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-5" href="/orvane/portfolio">Portfolio</a>
+          <a class="nav-link fs-5" href="/portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fs-5" href="#">Employees</a>
@@ -42,8 +42,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
             <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li><a class="dropdown-item" href="/orvane/signup">SignUp</a></li>
-            <li><a href="/orvane/log-out"
+            <li><a class="dropdown-item" href="/user/signup">SignUp</a></li>
+            <li><a href="/user/log-out"
                 style="text-decoration: none;color: rgb(237, 16, 16); font-size: large;margin-left: 1rem;" id="dropdown-logout" >Logout</a>
             </li>
           </ul>
@@ -51,7 +51,7 @@
 
     </div>
     <% } else { %>
-      <a href="/orvane/log-in" style="font-size: x-large;text-decoration: none;" id="sign-a">Sign in</a>
+      <a href="/user/log-in" style="font-size: x-large;text-decoration: none;" id="sign-a">Sign in</a>
       <% } %>
         </li>
         </ul>
