--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -3,7 +3,7 @@
     <div class="row mt-3">
         <h3 class="col-6 offset-2">Sign Up to Orvane</h3>
         <div class="col-4 offset-2 mt-3">
-            <form method="POST" action="/orvane/signup" class="needs-validation" novalidate>
+            <form method="POST" action="/user/signup" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input name="username" placeholder="Add a username" type="text" class="form-control" id="username"
@@ -23,6 +23,6 @@
                 </div>
                 <button class="btn btn-success mb-3 mt-2">SignUp</button>
             </form>
-            <div><a href="/orvane/log-in" class="login">Already have an account</a></div>
+            <div><a href="/user/log-in" class="login">Already have an account</a></div>
         </div>
     </div>
