--- a/views/abouts/career.ejs
+++ b/views/abouts/career.ejs
@@ -1,35 +1,35 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
-    <div class="body">
+    <div class="hero-container" style="width: 100vw;">
         <main>
             <div class="about-intro">
-                <p class=" hello career-heading">Join us.</p>
-                <p class="career-info-text ">Welcome to Orvane Digital—where innovation meets opportunity.</p>
-                <p class="career-text-tag">
-                    As a leading digital experience agency, we're a community of passionate professionals and
+                <div class="process"><p class="head">Join us.</p></div>
+                <div class="process"><p class="head-tag ">Welcome to Orvane Digital—where innovation meets opportunity.</p></div>
+                <div class="process-desc">
+                    <p>As a leading digital experience agency, we're a community of passionate professionals and
                     craftspeople dedicated to pushing boundaries and achieving excellence. This happens through not only
-                    the work we do but through those we work with.
-                </p>
+                    the work we do but through those we work with.</p>
+                </div>
             </div>
             <a href="#opportunity">
-                <p style="font-size: 30px; margin-left: 2rem;text-decoration: underline;margin-bottom: 2rem;" id="open-positions">View Open Positions</p>
+                <p class="head-tag" style="text-decoration: underline;margin-bottom: 2rem;" id="open-positions">View Open Positions</p>
             </a>
             
-            <div class="row ">
-                <div class="col-xl-7">
+            <div class="row  ">
+                <div class="col-xl-7 process-desc">
                     <ul class="list-unstyled p-0">
                         <li class="wow cfadeinup animated" style="visibility: visible;">
-                            <p class="career-info-text">Our diverse team thrives on collaboration, creativity, and
+                            <p class="">Our diverse team thrives on collaboration, creativity, and
                                 continuous growth.
                             </p>
-                            <p class="career-text-tag">Working at ORVANE means being part of an environment where
+                            <p class="">Working at ORVANE means being part of an environment where
                                 strategic thinking meets modern
                                 technology, every project is an opportunity to innovate, and your unique skills shape
                                 world-class digital solutions.</p>
                         </li>
                         <li class="wow cfadeinup animated" style="visibility: visible;">
-                            <p class=" career-info-text">Meaningful Work</p>
-                            <p class="career-text-tag">From crafting intuitive user experiences to developing robust
+                            <p class="head-tag">Meaningful Work</p>
+                            <p class="">From crafting intuitive user experiences to developing robust
                                 digital platforms, we
                                 empower our team members to make their mark on meaningful projects and stories alike.
                                 Whether collaborating with renowned Fortune 500 companies or helping ambitious startups
@@ -37,8 +37,8 @@
                                 growth and collective success.</p>
                         </li>
                         <li class="wow cfadeinup animated" style="visibility: visible;">
-                            <p class=" career-info-text">Exceeding Expectations</p>
-                            <p class="career-text-tag">At Orvane, we believe in fostering an environment where
+                            <p class="head-tag">Exceeding Expectations</p>
+                            <p class="">At Orvane, we believe in fostering an environment where
                                 creativity flourishes, skills are
                                 regularly developed, and every team member has the opportunity to contribute to
                                 game-changing digital transformations. Join us in creating experiences that don't just
@@ -47,29 +47,29 @@
                     </ul>
                 </div>
                 <div class="offset-lg-1 col-lg-4" id="sticky2">
-                    <div class="img-wrapper"> <span class="text-stroke career-heading "
-                            style="font-size: 100px;opacity: 0.5;">Work @ Orvane</span> </div>
+                    <div class="img-wrapper head"> <span class="text-stroke career-heading "
+                            style="opacity: 0.5;">Work @ Orvane</span> </div>
                 </div>
             </div>
             <section class="story-beats nitro-offscreen">
-                <div class="container">
+                <div class="container process">
                     <div class="row">
-                        <div class="col-lg-9 col-xl-7 mb-4">
-                            <p class="career-info-text" style="margin-left: -4rem;">At Orvane Digital, we offer more
+                        <div class="col-lg-9 col-xl-7 mb-4 process-desc">
+                            <p class="">At Orvane Digital, we offer more
                                 than just a job.</p>
-                            <p class="career-text-tag">We provide a launchpad for innovation, collaboration, and career
+                            <p class="">We provide a launchpad for innovation, collaboration, and career
                                 acceleration. As a
                                 dynamic digital experience agency, we foster an environment where bold ideas thrive,
                                 cross-functional teamwork is celebrated, and every team member contributes to building
                                 world-class digital solutions for clients who expect the exceptional.</p>
-                            <p class="career-text-tag">We offer a flexible remote work environment, allowing you to
+                            <p class="">We offer a flexible remote work environment, allowing you to
                                 collaborate from wherever
                                 you do your best work—while staying connected to a creative, supportive team.</p>
                         </div>
                     </div>
                 </div>
                 <div class="container">
-                    <p class="career-info-text">What sets us apart:</p>
+                    <p class="" style="font-size: 3vw;">What sets us apart:</p>
                 </div>
                 <div class="container" style="font-size: 20px;">
                     <div class="row">
@@ -136,7 +136,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <p class="h1 cfadeinup wow animated career-heading mt-5" style="visibility: visible;font-size: 100px;opacity: 0.5;padding-bottom: 2rem;" id="opportunity">Opportunities</p>
+                            <p class="h1 cfadeinup wow animated career-heading mt-5 head" style="visibility: visible;opacity: 0.5;padding-bottom: 2rem;" id="opportunity">Opportunities</p>
                             <div class="opportunities-list cfadeinup wow animated" style="visibility: visible;"> <a
                                     class="btn-link btn-link-white h4"
                                     href="mailto:jeveneabhi665@gmail.com"><span>Web
