--- a/views/abouts/who-we-are.ejs
+++ b/views/abouts/who-we-are.ejs
@@ -1,23 +1,32 @@
 <% layout("/layouts/boilerplate.ejs") -%>
 
 
-  <div class="about-section">
-    <div class="about-intro">
-      <p class="hello try">Hello,</p>
-      <p class="info-text">we're ORVANE Digitals</p>
-      <p class="info-text-tag">
-        We produce immersive digital destinations that amplify voices,
-        turn heads, and wow visitors.
-      </p>
+  <div class="hero-container">
+  <div style="width: 50vw;">
+    <div class="process">
+      <p class="head" id="hello">Hello,</p>
     </div>
-
-    <div class="col-lg-4 col-xl-3 mx-auto hero-in-sub-fade-up" >
-      <div class="statistics font-stat stat" > <span class="h2 d-block font-stat stat" >20+</span> <span class="body-large d-block mb-2 stat">Years in
-          business</span></div>
-      <div class="statistics font-stat stat " > <span class="h2 d-block font-stat stat">500+</span> <span class="body-large d-block stat">Websites &amp;
-          projects launched</span> </div>
-      <div class="statistics font-stat stat" > <span class="h2 d-block font-stat stat">35+</span> <span class="body-large d-block stat">Awards &amp;
-          recognition</span> </div>
+    <div class="process">
+      <p class="head-tag">we're ORVANE Digitals</p>
     </div>
-
+    <div class="process-desc">
+      <p>We produce immersive digital destinations that amplify voices,
+      turn heads, and wow visitors.</p>
+    </div>
   </div>
+
+  <div class="col-lg-4 col-xl-3 mx-auto hero-in-sub-fade-up ms-auto" style="width: 40vw;">
+    <div class="statistics font-stat stat">
+      <span class="h2 d-block font-stat stat">20+</span>
+      <span class="body-large d-block mb-2 stat">Years in business</span>
+    </div>
+    <div class="statistics font-stat stat">
+      <span class="h2 d-block font-stat stat">500+</span>
+      <span class="body-large d-block stat">Websites &amp; projects launched</span>
+    </div>
+    <div class="statistics font-stat stat">
+      <span class="h2 d-block font-stat stat">35+</span>
+      <span class="body-large d-block stat">Awards &amp; recognition</span>
+    </div>
+  </div>
+</div>
