--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,7 +7,7 @@
     <div class="line2">
       <h1>That Impowers Your Business</h1>
     </div>
-    <div class="service-info mt-2 ">
+    <div class="service-info mt-2 " style="display:flex;">
       <p>&nbsp;Web-Development &nbsp; </p>
       <p>&nbsp;Web-Applications &nbsp; </p>
       <p>&nbsp;UI-UX Design &nbsp; </p>
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div>
-    <h2 class="service-heading">Service</h2>
+    <h2 class="service-heading">Services - </h2>
     <div class="services-preview mt-2">
       <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-2 g-3">
         <% for(let service of allServices) { %>
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <h2 class="portfolio-heading">Ambassador</h2>
+  <h2 class="portfolio-heading">Ambassador - </h2>
   <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 g-3 mb-5 mt-3">
     <% for(let employee of allEmployee) { %>
       <div class="col">
