--- a/views/services/service.ejs
+++ b/views/services/service.ejs
@@ -3,13 +3,13 @@
 <link rel="stylesheet" href="/css/portfolio.css">
 
 <div class="service-intro">
-    <p class="service-title try" style="padding-left: 0;">World-class</p>
+    <p class="service-title" style="padding-left: 0;">World-class</p>
     <p class="service-info-text info-text" style="padding-left: 0;">Digital to destination, from idea to execution</p>
 </div>
 
 <div class="service-info-display">
     <div id="display">
-        <img style="height: 400px;width: 80vw;opacity: 0.4;border: white;border-radius: 1%;" id="service-img-display" src="https://plus.unsplash.com/premium_photo-1661370129267-218cf5075c23?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+        <img style="height: 20vw;width: 70vw;opacity: 0.4;border: white;border-radius: 1%;" id="service-img-display" src="https://plus.unsplash.com/premium_photo-1661370129267-218cf5075c23?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
         <p style="margin-top:2rem; font-size: 40px !important; padding-left: 0;" class="service-info-text info-text">Make Your Digital Presence Matters</p>
         <p style="font-size: larger;">We are a full service technology and digital solutions company with over 20 years of experience in Industry.</p>
     </div>
