--- a/views/portfolio/portfolio.ejs
+++ b/views/portfolio/portfolio.ejs
@@ -8,12 +8,12 @@
         A showcase of our real-world projects — blending design, data, and development into digital excellence.
       </p>
 
-      <div class="row  row-cols-sm-2 row-cols-md-3 g-4">
+      <div class="row  row-cols-sm-2 row-cols-md-3  g-4">
         <!-- Project 1 -->
         <% for(let portfolio of Portfolios) { %>
-          <div class="col-md-4  row-cols-sm-2 row-cols-md-3 mb-5">
+          <div class="col-md-4  row-cols-sm-2 row-cols-md-3  mb-5">
             <a href="/portfolio/<%= portfolio._id%>">
-              <div class="card project-card border-0 shadow-sm" style="width: 20vw;height: 50vh;">
+              <div class="card project-card border-0 shadow-sm" id="portfolio-card">
                 <div class="project-img">
                   <img src="<%=portfolio.projectThumbnail%>" class="img-fluid rounded-top" alt="image">
                 </div>
