--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
     <div class="row mt-3">
         <h3 class="col-6 offset-3">Sign in</h3>
         <div class="col-4 offset-3 mt-3">
-            <form method="POST" action="/user/login" class="needs-validation" novalidate>
+            <form method="POST" action="/user/log-in" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input name="username" placeholder="Enter username" type="text" class="form-control" id="username"
